naming and icons

--- a/public/piano_helper.html
+++ b/public/piano_helper.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="popup.js" type="module"></script>
+  <script src="piano_helper.js" type="module"></script>
   <link href="./piano_helper.css" rel="stylesheet">
 </head>
 
 <body>
 
   <div>
-    <h1 id="main_header">🎹 Piano Helper</h1>
+    <h1 id="main_header">Piano Helper</h1>
   </div>
 
   <div class>
