webpack to vite

--- a/public/piano_helper.html
+++ b/public/piano_helper.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="piano_helper.js" type="module"></script>
+  <script src="piano_helper.umd.js" type="module"></script>
   <link href="./piano_helper.css" rel="stylesheet">
 </head>
 
