--- a/public/piano_helper.html
+++ b/public/piano_helper.html
@@ -18,8 +18,8 @@
     <h2 class="">TAC</h2>
 
     <div>
-      <h3>AID / Account</h3>
-      <span id="aid"></span>
+      <strong>AID / Account</strong>
+      <pre id="aid"></pre>
     </div>
 
     <div>
@@ -27,17 +27,12 @@
       <span id="subscriptions"></span>
     </div>
 
-    <div class="bg-gray-100 is-size-7" id="tac"></div>
+    <div class="" id="tac"></div>
   </div>
 
   <div>
     <h2 class="">UTP</h2>
-    <div class="bg-gray-100 is-size-7" id="utp"></div>
-  </div>
-
-  <div data-accordion="collapse">
-    <h2 id="accordion-collapse-heading-1">all Cookies</h2>
-    <ul id="cookie-list" class=""></ul>
+    <div class="" id="utp"></div>
   </div>
 
 </body>
