--- a/public/piano_helper.html
+++ b/public/piano_helper.html
@@ -17,14 +17,23 @@
   <div class>
     <h2 class="">TAC</h2>
 
-    <div>
-      <strong>AID / Account</strong>
-      <pre id="aid"></pre>
+    <div id="tac-size">
     </div>
 
     <div>
-      <h3>Subscriptions</h3>
-      <span id="subscriptions"></span>
+      <strong>AID / Account: </strong>
+      <code id="tac-aid"></code>
+    </div>
+
+    <div>
+      <strong>UserId: </strong>
+      <code id="tac-user-id"></code>
+    </div>
+
+    <div>
+      <h3>Subscriptions: </h3>
+      <p>valid: <span id="tac-valid-subscriptions"></span></p>
+      <p>invalid: <span id="tac-invalid-subscriptions"></span></p>
     </div>
 
     <div class="" id="tac"></div>
