naming and types
stable when subs are missing

human readable timestamp

--- a/public/piano_helper.html
+++ b/public/piano_helper.html
@@ -20,27 +20,53 @@
     <div id="tac-size">
     </div>
 
-    <div>
+    <ul>
+    <li>
       <strong>AID / Account: </strong>
-      <code id="tac-aid"></code>
-    </div>
+      <span id="tac-aid"></span>
+    </li>
 
-    <div>
+    <li>
       <strong>UserId: </strong>
-      <code id="tac-user-id"></code>
-    </div>
+      <span id="tac-user-id"></span>
+    </li>
 
-    <div>
-      <h3>Subscriptions: </h3>
-      <p>valid: <span id="tac-valid-subscriptions"></span></p>
-      <p>invalid: <span id="tac-invalid-subscriptions"></span></p>
-    </div>
-
+    <li>
+      <strong>Subscriptions: </strong>
+        <ul>
+          <li>valid: <span id="tac-active-subscriptions"></span></li>
+          <li>invalid: <span id="tac-inactive-subscriptions"></span></li>
+        </ul>
+      </li>
+    </ul>
     <div class="" id="tac"></div>
   </div>
 
   <div>
     <h2 class="">UTP</h2>
+    <ul>
+      <li>
+        <strong>AID / Account: </strong>
+        <span id="utp-aid"></span>
+      </li>
+      <li>
+        <strong>User-Id: </strong>
+        <span id="utp-user-id"></span>
+      </li>
+      <li>
+        <strong>Name: </strong>
+        <span id="utp-name"></span>
+      </li>
+      <li>
+        <strong>E-Mail: </strong>
+        <span id="utp-email"></span>
+      </li>
+      <li>
+        <strong>Last-Login:</strong>
+        <span id="utp-last-login"></span>
+      </li>
+    </ul>
+   
     <div class="" id="utp"></div>
   </div>
 
